Fixed the circle aligment on small screens

--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,8 @@ input:checked+.slider:before {
 
 .circle {
     position: absolute;
-    left: 140px;
+    left: 0;
+    right: 0;
 }
 
 
@@ -191,7 +192,7 @@ input[type=number] {
 
 #radius-txt {
     top: 83px;
-    left: 140px;
+    left: 50%;
 }
 
 #rectangleL-txt {
